@@ -1,3 +1,9 @@
+2005-11-06 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/tests/bug1348008.c: added
+	* src/mcs51/gen.c (saveRBank, unsaveRBank): fixed bug 1348008
+	* support/regression/tests/bug1337835.c: updated comment
+
 2005-11-06 Borut Razem <borut.razem AT siol.net>
 
 	* sim/ucsim/error.cc, sim/ucsim/errorcl.h,
